# Vehicle_Fault_Dectection

./: .gitignore  LICENSE  README.md  check_api.py  data.yaml  debug_sources.py
be_fastapi/: .gitignore  Dockerfile  EXAMPLE_REQUESTS.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  seed_data.py  setup.py
be_fastapi/DSL/: Camera.g4  SEED_DATA.md  clean.sh  generate.sh  rule_engine.py  run.py  test_dsl.py
be_fastapi/DSL/CompiledFiles/: CameraLexer.py  CameraListener.py  CameraParser.py  CameraVisitor.py  FluLexer.py  ViolationsLexer.py  ViolationsParser.py  ViolationsVisitor.py
be_fastapi/DSL/tests/: 001.txt  002.txt  003.txt
be_fastapi/DSL/tree/: tree_visualizer.py
be_fastapi/alembic/: env.py
be_fastapi/alembic/versions/: 001_initial_schema.py  296396a612e2_auto_revision.py  483b90074a2a_final_database_schema.py  5d2d8b0d4358_initial_schema.py  607d140364bb_auto_revision.py  67bc1ef02eb8_auto_revision.py  800c9bcd8d18_init_db_schema.py  e805a5ba2666_initial_schema_with_sources_table.py
be_fastapi/app/: main.py
be_fastapi/app/api/: assignments.py  dependencies.py  sources.py
be_fastapi/app/core/: config.py  cors.py
be_fastapi/app/database/: session.py
be_fastapi/app/enum/: role.py
be_fastapi/app/exception/: auth_exception.py  base_exception.py  handlers.py  user_exception.py
be_fastapi/app/models/: __init__.py  base.py  camera.py  rule.py  (+7 more)
be_fastapi/docs/: API_DOCUMENTATION.md  ENDPOINTS_EXPLANATION.md  IMPLEMENTATION_SUMMARY.md  login.md
be_fastapi/script/: auto_migrate.sh  get_user_ids.py  seed_data.py
(+164 files in other folders)
